Megamenu: Fix Alignment error on RTL language

--- a/source/plg_system_t3/base/less/megamenu-responsive.less
+++ b/source/plg_system_t3/base/less/megamenu-responsive.less
@@ -87,4 +87,20 @@
     
   }
 
+  // MEGAMENU RTL override
+  // --------------------------------------------------------------
+  // 
+  html[dir="rtl"] {
+    .t3-megamenu {
+      // Menu Grids
+      // ----------
+      .row-fluid,
+      .mega-dropdown-menu,
+      .row-fluid [class*="span"] {
+        right: 0 !important;
+        margin-right: 0 !important;
+      }
+    }
+  }
+
 }
