--- a/source/plg_system_t3/base/less/megamenu.less
+++ b/source/plg_system_t3/base/less/megamenu.less
@@ -381,3 +381,51 @@
     }
   }
 }
+
+
+
+// MEGAMENU RTL override
+// --------------------------------------------------------------
+// 
+html[dir="rtl"] {
+  .t3-megamenu {
+    // Menu alignment
+    // --------------
+    .mega-align-left > .dropdown-menu {
+      right: 0;
+    }
+
+    .mega-align-right > .dropdown-menu {
+      right: auto;
+      left: 0;
+    }
+
+    .mega-align-center > .dropdown-menu {
+      right: 50%;
+      transform: translate(50%);
+      -webkit-transform: translate(50%);
+      -moz-transform: translate(50%);
+      -ms-transform: translate(50%);
+      -o-transform: translate(50%);
+    }
+
+    .dropdown-submenu.mega-align-left > .dropdown-menu {
+      right: 100%;
+    }
+
+    .dropdown-submenu.mega-align-right > .dropdown-menu {
+      right: auto;
+      left: 100%;
+    }
+
+    .mega-align-justify > .dropdown-menu {
+      right: 0;
+      margin-right: 0;
+      top: auto;
+    }
+
+    .mega-nav .dropdown-submenu > a:after {
+      direction: ltr;
+    }
+  }
+}
